spacing fix

--- a/carneAsadaStyle.css
+++ b/carneAsadaStyle.css
@@ -79,6 +79,7 @@ h1 {
     margin-right: auto;
     border: 2px solid black;
     border-radius: 1.2rem;
+    margin-bottom: 3rem;
 
 }
 
